--- a/blok4/jee7/pom.xml
+++ b/blok4/jee7/pom.xml
@@ -9,8 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>pom</packaging>
     <artifactId>jee7</artifactId>
+    <packaging>pom</packaging>
+
+    <properties>
+        <!-- add to fix this error: Failed to execute goal org.apache.maven.plugins:maven-war-plugin:2.2:war (default-war) on project rest: Error assembling WAR: webxml attribute is required (or pre-existing WEB-INF/web.xml if executing in update mode) -->
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
 
     <modules>
         <module>cdi</module>
