--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,15 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
         <mockito.junit.jupiter.version>3.3.0</mockito.junit.jupiter.version>
         <skipUnitTests>false</skipUnitTests>
         <skipIntegrationTests>false</skipIntegrationTests>
+        <arquillian.bom.version>1.5.0.Final</arquillian.bom.version>
+        <arquillian.openliberty.version>1.0.6</arquillian.openliberty.version>
+        <mysql.connector.version>8.0.18</mysql.connector.version>
     </properties>
 
     <modules>
@@ -165,12 +169,26 @@
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
-                <version>8.0</version> <!-- moet eigenlijk 7 zijn maar ik krijg het niet werkend i.c.m. validator -->
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>2.1</version>
+            </dependency>
+            <!-- Arquillian  -->
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${arquillian.bom.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>io.openliberty.arquillian</groupId>
+                <artifactId>arquillian-liberty-managed</artifactId>
+                <version>${arquillian.openliberty.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
