--- a/blok4/jee7/rest/pom.xml
+++ b/blok4/jee7/rest/pom.xml
@@ -3,10 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>rest</artifactId>
-    <version>1.0</version>
-    <packaging>war</packaging>
 
     <parent>
         <artifactId>jee7</artifactId>
@@ -14,17 +10,17 @@
         <version>1.0</version>
     </parent>
 
+    <artifactId>rest</artifactId>
+    <version>1.0</version>
+
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
@@ -37,8 +33,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.phillip-kruger</groupId>
@@ -46,9 +43,8 @@
             <version>1.0.8</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-            <scope>test</scope>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
@@ -60,6 +56,11 @@
             <artifactId>jpa</artifactId>
             <version>1.1</version>
             <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -77,7 +78,34 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
+        <!-- CDI: ******************************************** -->
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-junit5</artifactId>
+        </dependency>
 
+        <!--JPA-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+
+        <!-- use this when using java 9+ : -->
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.6.0</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <!-- To run Arquillian test -->
@@ -97,6 +125,12 @@
     <!--                               open http://localhost:9080/<app-name>/ -->
     <!-- mvn liberty:undeploy -->
     <!-- mvn liberty:stop -->
+
+    <!-- To generate and view swagger-ui:
+     Package and deploy the war and start the appserver.
+     Navigate to http://<host>:<port>/<appname>/<apppath>/apiee/
+              ie http://localhost:9080/rest_war_exploded/resources/apiee/
+     -->
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -106,11 +140,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
 
-            <!-- Run tests during mvn integration-test -->
+            <!-- Run IT-tests during mvn verify -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
